# orca

./: .env.example  .env.gpg  .gitignore  .traerules  Cargo.toml  README.md  add_block_poller.py  add_exec_id.py  add_pool_to_diag.py  debug_per_hop.py  debug_quoter_calls.py  fix_balance_provider_rpc.py  fix_block_poller_signature.py  foundry.toml  full_cycle_v3_fix.py  improve_quote_error_handling.py  integrate_quoter_v3.py  live_refresh_fix.py  nohup.out  nonce_fix.py  orca_backtest.xlsx  pool_reserves_cache.json  pools_cache_base.json  quoter_v2_fix.py  replace_quoter_integration.py  restart_orca.sh  resumo_completo.txt  run_orca.sh  run_orca_loop.sh  run_safe.sh  sequencer_fix.py  ultimo_log.txt  v3_math_local.py
cache/: solidity-files-cache.json
contracts/: OrcaExecutor.sol  OrcaExecutor.sol.orig  OrcaExecutor.sol.rej
data/: pattern_memory.json
logs/: opportunities.csv  opportunities_20260526.csv  opportunities_clean.csv  orca_dryrun_report.xlsx  shadow_hunter.2026-05-21  shadow_hunter.2026-05-22  shadow_hunter.2026-05-27  shadow_hunter.2026-05-28  shadow_hunter.2026-05-31  shadow_hunter.2026-06-01  shadow_hunter.2026-06-03  shadow_hunter.2026-06-09  terminal.2026-05-21  terminal.2026-05-22  terminal.2026-05-27  terminal.2026-05-28  terminal.2026-05-31  terminal.2026-06-01  terminal.2026-06-03  terminal.2026-06-09
scripts/: generate_report.py
src/: apex_shadow_protocol.rs  engine.rs  factory_scanner.rs  god_mode.rs  lib.rs  logging.rs  main.rs  main_clean.rs  pathfinder.rs  pricing.rs  provider.rs  sim.rs  telemetry.rs  types.rs
tests/: integration_test.rs  (+1 more)
(+113 files in other folders)
