[package]
name = "orca-mev"
version = "0.2.0"
edition = "2021"

[dependencies]
alloy = { version = "0.8", features = ["full"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
eyre = "0.6"
dashmap = "5"
parking_lot = "0.12"
smallvec = "1"
ahash = "0.8"
async-trait = "0.1"
num-traits = "0.2"
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["alloc"] }
hex = "0.4"
crossbeam = "0.8"
revm = { version = "14", default-features = false, features = ["std", "serde"] }
revm-primitives = { version = "10", default-features = false, features = ["std"] }
hashbrown = "0.14"
csv = "1.3"
reqwest = { version = "0.12", features = ["json"] }
fixed = { version = "1.28", features = ["serde"] }
num_cpus = "1.16"
rand = "0.8"
rust_xlsxwriter = "0.75"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[[bin]]
name = "orca-engine"
path = "src/main.rs"

[[bin]]
name = "backtester"
path = "src/bin/backtester.rs"
